# game-of-life-mosaics

./: .gitignore  LICENSE  MANIFEST.in  PIPELINE.md  PIPELINE_CHECK.md  README.md  README_HF.md  app.py  cleanup_for_public_release.sh  deploy.sh  manipulate_images.ipynb  mosaics.py  overview.ipynb  pyproject.toml  requirements.txt  setup.py  solutions_pattern_level_5.npy  test.cells
data/: solutions_pattern_level_3.npy  test.cells
docs/superpowers/specs/: 2026-06-17-gradio-web-app-design.md
golly/: bernard_level3_size100.cells  bernard_level4_size100.cells  jan_level3_size100.cells  jan_level4_size100.cells  michiel_level4_size100.cells
notebooks/: bw26-portraits.ipynb  bw26-wall_art.ipynb  golly.ipynb  make_website_background.ipynb  open_problems.ipynb  parameter_demo.ipynb  pattern_generation.ipynb  playground.ipynb  preprocessing_demo.ipynb  quickstart.ipynb  quicktest.cells  tile_generation.ipynb  vraag3.py  vraag8a.py  vraag8b.py
output/golly/: john_level5_size100.cells  michiel_level3_size100.cells
src/: mosaics.py
src/gol_mosaics/: __init__.py  colors.py  colours.py  eca.py  export.py  image_processing.py  mosaic.py  patterns.py  renderer.py
src/gol_mosaics/data/: solutions_pattern_level_1.npy  solutions_pattern_level_2.npy  solutions_pattern_level_4.npy
tests/: __init__.py  test_app.py  test_colors.py  test_colours.py  test_eca.py  test_image_processing.py  test_integration.py  test_patterns.py
